--- a/vue/package.json
+++ b/vue/package.json
@@ -13,16 +13,19 @@
     "@tiptap/starter-kit": "2.0.0-beta.192",
     "@tiptap/vue-3": "2.0.0-beta.97",
     "apexcharts": "3.36.3",
+    "axios": "^1.6.8",
     "date-fns": "^2.29.3",
     "lodash": "^4.17.21",
     "maska": "^1.5.0",
+    "vee-validate": "^4.5.8",
     "vite-plugin-vuetify": "1.0.2",
     "vue": "3.2.31",
     "vue-router": "4.0.12",
-    "vue3-perfect-scrollbar": "1.6.0",
     "vue-tabler-icons": "2.9.0",
     "vue3-apexcharts": "1.4.1",
-    "vuetify": "3.0.1",
+    "vue3-perfect-scrollbar": "1.6.0",
+    "vuetify": "^3.0.1",
+    "vuex": "^4.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -39,7 +42,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "sass-loader": "^10.0.0",
-    "typescript": "~4.5.5",
+    "typescript": "^5.3.3",
     "vite": "^2.9.1",
     "vue-cli-plugin-vuetify": "2.5.5",
     "vue-tsc": "1.0.3",
