--- a/vue/package.json
+++ b/vue/package.json
@@ -19,12 +19,12 @@
     "maska": "^1.5.0",
     "vee-validate": "^4.5.8",
     "vite-plugin-vuetify": "1.0.2",
-    "vue": "3.2.31",
+    "vue": "^3.4.21",
     "vue-router": "4.0.12",
     "vue-tabler-icons": "2.9.0",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.0",
-    "vuetify": "^3.0.1",
+    "vuetify": "^3.5.15",
     "vuex": "^4.1.0",
     "yup": "^0.32.11"
   },
